--- a/Server/package.json
+++ b/Server/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "flicksondemand-server",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon app"
+    "dev": "nodemon server"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "knex": "^2.4.2",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.22",
-    "dotenv": "^16.3.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "morgan": "^1.10.0",
+    "validator": "^13.11.0"
   }
 }
